fix: score tooltip not showing on mobile

--- a/src/components/score/score.module.scss
+++ b/src/components/score/score.module.scss
@@ -80,6 +80,7 @@ $normal-scale: (
   font-size: 14px;
   padding: 10px 5px;
 
+  max-width: calc(100vw - 200px);
   p:last-child {
     margin-bottom: 0;
   }
